# alice-wallet

./: .gitattributes  .gitignore  README.md  cli.py  l6_public_release_signing_readiness.py  miner_signing_readiness.py  phase50c_release_readiness.py  release_ops.py  requirements.txt  wallet.py
.github/workflows/: release.yml
docs/: ALICE_WALLET_XMR_STYLE_UPGRADE_PLAN.md  INSTALL.md  L6_PUBLIC_CLIENT_RELEASE_SIGNING_READINESS.md  MINER_SIGNING_READINESS_BRIDGE.md  UPDATE-SCHEME.md  WALLET-ALLINONE-PLAN.md  WALLET_FULLNODE_BUILD_NOTES.md  XMR_GUI_REFERENCE_AUDIT.md
gui/: Cargo.toml
gui/assets/macos/: AliceWallet.icns
gui/release-assets/: alice-mainnet-raw.json
gui/scripts/: adhoc_sign_macos.sh  build_macos_icon.sh  build_qa_app_bundle.sh  release.sh
gui/src/: app.rs  chain.rs  config.rs  crypto.rs  history.rs  i18n.rs  lib.rs  main.rs  miner.rs  node.rs  update.rs  wallet_profiles.rs
gui/src/supervise/: child.rs  miner_supervisor.rs  mod.rs  node_supervisor.rs
gui/src/ui/: accounts.rs  address_book.rs  backup.rs  create.rs  dashboard.rs  history_view.rs  import.rs  mining.rs  mod.rs  node_view.rs  receive.rs  send.rs  settings.rs  shell.rs  stake.rs  theme.rs  unlock.rs  update_prompt.rs  widgets.rs
tests/: test_l6_public_release_signing_readiness.py  test_miner_signing_readiness.py  test_phase40_cli.py  test_phase40_gui_source.py  test_phase40s_wallet_profiles.py  test_phase40t_owner_no_mock.py  test_phase40u_release_ops.py  test_phase50c_release_readiness.py
tests/fixtures/: l6_missing_credentials.fail_closed.json  l6_signed_manifest_metadata.valid.json
