[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
bip39 = "2.0.0"
blake2 = "0.10.6"
bs58 = "0.5.1"
dirs = "5.0.1"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.34.1", features = ["svg"] }
hex = "0.4.3"
image = { version = "0.25.10", default-features = false, features = ["png"] }
pbkdf2 = "0.12.2"
rand = "0.8.5"
resvg = "0.37"
scale-value = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
subxt = { version = "0.50.0", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = { version = "0.50.0", default-features = false, features = ["native", "sr25519", "std", "subxt"] }
substrate-bip39 = "0.6.1"
tiny-skia = "0.11"
tokio = { version = "1.37.0", features = ["full"] }
usvg = "0.37"
zeroize = { version = "1.8.2", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
qrcode = { version = "0.14", default-features = false }
