[package]
name = "gui"
version = "0.1.4"
edition = "2021"

# Headless CLI wallet. Lives in this crate so it reuses the display-free `gui`
# LIBRARY core (chain/crypto/config/wallet_profiles) WITHOUT linking eframe/egui
# or any GUI module — it imports only `gui::{chain, crypto, config, ...}`, never
# `app`/`ui`. Runs on headless Linux servers. See src/bin/alice_wallet_cli.rs.
[[bin]]
name = "alice-wallet-cli"
path = "src/bin/alice_wallet_cli.rs"

[dependencies]
# CLI arg parser for the headless wallet binary. Pure logic, no display deps.
clap = { version = "4", features = ["derive"] }
# No-echo password prompt for the headless `send`/`sign` keystore unlock.
rpassword = "7"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
bip39 = "2.0.0"
blake2 = "0.10.6"
bs58 = "0.5.1"
dirs = "5.0.1"
# Self-update trust anchor: verify the ed25519-signed release manifest
# (latest.json.sig) with our embedded public key. Raw ed25519 (no pre-hash),
# matching the offline signer (`openssl pkeyutl -sign -rawin`). We only need
# detached-signature verification, so default features (incl. key generation)
# are off and just `std` is enabled for the `Verifier` ergonomics.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.34.1", features = ["svg", "image"] }
hex = "0.4.3"
image = { version = "0.25.10", default-features = false, features = ["png"] }
pbkdf2 = "0.12.2"
rand = "0.8.5"
resvg = "0.37"
scale-value = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
# Blocking HTTP client for the self-updater (manifest + artifact download).
# rustls-only TLS (no system OpenSSL). The updater runs on the worker thread,
# so a blocking client keeps it off the async/subxt stack entirely.
ureq = { version = "2.10", default-features = false, features = ["tls", "gzip"] }
subxt = { version = "0.50.0", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = { version = "0.50.0", default-features = false, features = ["native", "sr25519", "std", "subxt"] }
substrate-bip39 = "0.6.1"
tiny-skia = "0.11"
tokio = { version = "1.37.0", features = ["full"] }
usvg = "0.37"
zeroize = { version = "1.8.2", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
qrcode = { version = "0.14", default-features = false }
